# rust-bench-diff

./: CHANGELOG.md  Cargo.toml  README.md  bench-basic.sh  bench-busy.sh  bench-common.sh  bench-doc.sh  bench-elaborate-doc.sh  bench-eq-loop-micros.sh  bench-eq-micros.sh  bench-micros.sh  bench-millis.sh  bench-naive.sh  bench-nanos.sh  bench-simple-doc.sh  bench-simple.sh  bench-simple1.sh  bench-simple2.sh  bench.sh  check-features.sh  gen-doc.sh  test-features.sh  test-hypors.sh  test-named.sh  test-plain.sh  test.sh
R/: Data_for_Wilcoxon.csv  Student.txt  Welch.txt  Wilcoxon.txt
benches/: basic_bench.rs  bench_micros.rs  bench_micros_in_nanos.rs  bench_millis.rs  bench_millis_in_micros.rs  bench_nanos.rs  bench_support.rs  bench_t.rs  benchmark.rs  busy_bench.rs  doc_bench.rs  elaborate_doc_bench.rs  elaborate_print_diff_out.rs  main_bench.rs  naive_bench.rs  simple_bench.rs  simple_doc_bench.rs  simple_x_bench.rs
examples/: calibration.rs
src/: bench_diff.rs  bench_support.rs  harmonic_mean_estimate.md  lib.md  lib.rs  lib1-intro.md  lib1.md  lib2-20250408_23_02.md  lib2-details.md  lib2-refined_bounds.md  lib2.md  lib3-model.md  lib4-ending.md  statistics.rs  stats_types.rs  summary_stats.rs
src/basic_stats/: bernoulli.rs  core.rs  mod.rs  normal.rs  wilcoxon.rs
src/bench_support/: bench_basic_naive.rs  bench_naive.rs  bench_t.rs  bench_with_claims.rs  comprehensive_print_diff_out.rs  mod.rs  params_args.rs  print_diff_out.rs  scenario.rs
src/bench_utils/: mod.rs
src/core/: bench_diff.rs  diff_out.rs  mod.rs
src/dev_support/: work_fns.rs
src/dev_utils/: approx_eq.rs  mod.rs  nested_btree_map.rs  work_fns.rs
src/statistics/: basic.rs  mod.rs  types.rs  wilcoxon.rs
src/test_support/: claim.rs  common.rs  consts.rs  mod.rs  scale.rs  scenario.rs  work_fns.rs
