[package]
name = "bench_diff"
version = "1.0.0"
edition = "2024"
license = "MIT"
description = "Reliably compare the latencies of two functions/closures."
repository = "https://github.com/pvillela/rust-bench-diff/tree/main"
documentation = "https://docs.rs/bench_diff/latest/bench_diff/"
readme = "README.md"
keywords = [
    "latency",
    "measurement",
    "performance",
    "benchmarking",
    "difference",
]
categories = ["development-tools::profiling"]
exclude = ["CHANGELOG.md", "*.sh", ".gitignore"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hdrhistogram = "7.5"
sha2 = { version = "0.10", optional = true }
statrs = "0.18"
rand = { version = "0.9.0", features = ["std_rng"], optional = true }
rand_distr = { version = "0.5", optional = true }
hypors = { version = "0.2", optional = true }
polars = { version = "0.43", optional = true }                        # required by hypors

# All features below are for internal development use only
[features]
bench = ["test_support"] # intended only to be used by benches
dev_utils = ["dep:sha2"] # utilities for creation of synthetic benchmarks
test_support = [
    "dev_utils",
    "dep:rand",
    "dep:rand_distr",
] # intended only for tests and benches
hypors = [
    "test_support",
    "dep:hypors",
    "dep:polars",
] # to enable Wilcoxon rank sum test functionality

[[bench]]
name = "bench_t"
harness = false
