[package]
name = "bench_diff"
version = "1.1.0"
edition = "2024"
license = "MIT"
description = "Reliably compare the latencies of two functions/closures."
repository = "https://github.com/pvillela/rust-bench-diff/tree/main"
documentation = "https://docs.rs/bench_diff/latest/bench_diff/"
readme = "README.md"
keywords = [
    "latency",
    "measurement",
    "performance",
    "benchmarking",
    "difference",
]
categories = ["development-tools::profiling"]
exclude = [
    "CHANGELOG.md",
    "*.sh",
    ".gitignore",
    "examples",
    "R",
    "bench_support",
    "test_support",
    "dev_utils",
    "benches/basic_bench.rs",
    "benches/busy_bench.rs",
    "benches/main_bench.rs",
    "benches/naive_bench.rs",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
basic_stats = { version = "1.0", default-features = false, optional = true }
hdrhistogram = "7.5"
sha2 = { version = "0.10.9", optional = true }
statrs = "0.18"
rand = { version = "0.9", features = ["std_rng"], optional = true }
rand_distr = { version = "0.5", optional = true }

[features]
default = ["_stats_normal"]
# All features below are private
_stats_normal = ["basic_stats/normal", "basic_stats/aok"]
_stats_opt = ["basic_stats/binomial", "basic_stats/wilcoxon", "basic_stats/aok"]
_bench = ["_test_support", "dep:sha2"] # intended only to be used by benches
_dev_support = [
    "_stats_opt",
] # to hide functionality developed but not intended for clients
_test_support = [
    "_dev_support",
    "dep:rand",
    "dep:rand_distr",
] # intended only for tests and benches

[[bench]]
name = "main_bench"
harness = false

[[bench]]
name = "simple_bench"
harness = false

[[bench]]
name = "busy_bench"
harness = false

[[bench]]
name = "naive_bench"
harness = false

[[bench]]
name = "basic_bench"
harness = false
